# rtiow

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  util.sh
benches/: inv_sqrt_bench.rs
scenes/: 2.json  3.json  3_bvh.json  4.json  5.json  6.json  7.json  8.json  9.json  9_no_sphere.json  spheres.json  spheres_2.json  spheres_2_alt.json  spheres_2_alt_2.json  spheres_3.json
schema/: scene.schema.json  world.schema.json
scripts/: animation_1.js  gen_animation_frames.js  gen_rand_spheres.js
src/: aabb.rs  bvh.rs  camera.rs  image.rs  main.rs  object.rs  onb.rs  ray.rs  util.rs  vector3.rs
src/materials/: dielectric.rs  diffuse_light.rs  labertian.rs  lambertian.rs  metal.rs  mod.rs
src/objects/: block.rs  mod.rs  moving_sphere.rs  rectangle.rs  rotate.rs  scene.rs  sphere.rs  translate.rs  world.rs
src/pdf/: cosine.rs  hittable.rs  mixture.rs  mod.rs
src/textures/: constant.rs  mod.rs
