[package]
name = "raytracer"
version = "0.1.0"
authors = ["Jayden Chan <jaydencn7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "inv_sqrt_bench"
harness = false

[dependencies]
