[package]
name = "raytracer"
version = "0.1.0"
authors = ["Jayden Chan <jaydencn7@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 3
debug = false
lto = true
incremental = false

[[bench]]
name = "inv_sqrt_bench"
harness = false

[dev-dependencies]
criterion = "0.2"

[dependencies]
rand = "0.7.0"
rayon = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
