[package]
name = "raytracer"
version = "1.0.0"
authors = ["Jayden Chan <jaydencn7@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false

[[bench]]
name = "inv_sqrt_bench"
harness = false

[dev-dependencies]
criterion = "0.2"

[dependencies]
rand = "0.7.0"
rayon = "1.1.0"
serde = { version = "1.0.93", features = ["derive"] }
serde_json = "1.0.39"
